# splitwise

./: .dockerignore  .gitignore  Dockerfile  README.md  TECH_README.md  main.py  pyproject.toml  seed.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260618_0001_add_backend_constraints.py  20260622_0002_add_receipt_breakdown.py  20260624_0001_add_soft_delete_to_expenses.py  20260628_0001_add_notifications.py  931d1952f3e7_drop_balances_table.py  a8ec4f3aca3c_change_float_to_integer_for_currency.py
backend/: auth.py  config.py  database.py  datetime_utils.py  db_probe.py  dependencies.py  main.py  models.py  notifications.py  preplanning.py  schemas.py  services.py  storage.py  util.py
backend/routers/: analytics.py  auth.py  expenses.py  groups.py  notifications.py  receipts.py  users.py
frontend/: index.html  package-lock.json  package.json  scratch_login.html  scratch_signup.html  tsconfig.json
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx  router.tsx
frontend/src/components/: ActivityRows.jsx  ActivityRows.tsx  ActivityView.jsx  ActivityView.tsx  AddExpenseFlow.jsx  AddExpenseFlow.tsx  CashflowForecastCard.tsx  CreateGroupModal.jsx  CreateGroupModal.tsx  CustomDropdown.jsx  CustomDropdown.tsx  DashboardView.jsx  DashboardView.tsx  EditExpenseModal.jsx  EditExpenseModal.tsx  ExpenseDeleteDialog.tsx  ExpenseDetailView.jsx  ExpenseDetailView.tsx  FriendDetailView.jsx  FriendDetailView.tsx  FriendsView.jsx  FriendsView.tsx  Layout.tsx  (+24 more)
scripts/: add_friends.py
tests/: add_friends_tests.py  api_tests.py  conftest.py
(+48 files in other folders)
