[project]
name = "splitwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi",
    "google-auth>=2.55.0",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "passlib>=1.7.4",
    "pydantic[email]",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy",
    "uvicorn",
]
