[project]
name = "hisabkitab"
version = "0.1.0"
description = "Shared expense splitting and planning app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.0",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "fastapi",
    "google-auth>=2.55.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "passlib>=1.7.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pydantic[email]",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy",
    "uvicorn",
    "psycopg2-binary",
    "firebase-admin",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py"]
